# pulumi-tf-provider-boilerplate

./: .ci-mgmt.yaml  .gitignore  .golangci.yml  .travis.yml  .upgrade-config.yml  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Gopkg.template.toml  Makefile  README-PROVIDER.md  README.md  SETUP.md  go.mod  mise.toml  resources.go  setup.sh
.config/: mise.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_provider.yml  build_sdk.yml  command-dispatch.yml  community-moderation.yml  license.yml  lint.yml  main.yml  prerelease.yml  prerequisites.yml  publish.yml  pull-request.yml  release.yml  resync-build.yml  run-acceptance-tests.yml  test.yml  upgrade-bridge.yml  upgrade-provider.yml  verify-release.yml
cmd/pulumi-resource-x/: main.go
cmd/pulumi-resource-xyz/: main.go
cmd/pulumi-tfgen-x/: main.go
cmd/pulumi-tfgen-xyz/: main.go
deployment-templates/: .goreleaser.yml  README-DEPLOYMENT.md  release.yml  upgrade-provider.yml
examples/: examples_dotnet_test.go  examples_go_test.go  examples_nodejs_test.go  examples_py_test.go  examples_test.go  go.mod  go.sum
examples/basic-py/: Pulumi.yaml  __main__.py  requirements.txt
provider/: go.mod  go.sum  resources.go
scripts/: get-py-version  get-version  go.mod  plugins.mk  publish-plugin.sh  publish_tgz.sh
sdk/: go.mod  go.sum
sdk/python/: Pulumi.yaml  pyproject.toml
sdk/python/pulumi_xyz/: README.md  __init__.py  get_data_source.py  provider.py  resource.py
sdk/python/pulumi_xyz/config/: __init__.pyi  vars.py
sdk/python/pulumi_xyz/region/: _enums.py
tests/: unit_test.go
(+62 files in other folders)
